test/corpus/for.txt
================================================================================
For Statement: Simple
================================================================================

for i = 1:10
    1
end

--------------------------------------------------------------------------------

(source_file
  (for_statement
    (keyword)
    (iterator
      (identifier)
      (range
        (number)
        (number)))
    (block
      (number))
    (keyword)))

================================================================================
For Statement: Nested
================================================================================

for R = 1:N
    for C = 1:N
        continue
    end
    break
end

--------------------------------------------------------------------------------

(source_file
  (for_statement
    (keyword)
    (iterator
      (identifier)
      (range
        (number)
        (identifier)))
    (block
      (for_statement
        (keyword)
        (iterator
          (identifier)
          (range
            (number)
            (identifier)))
        (block
          (keyword))
        (keyword))
      (keyword))
    (keyword)))

================================================================================
For Statement: Single Line
================================================================================

for S = 1.0: -0.1: 0.0, do_some_task(S), end

for E = eye(N), do_some_task(E), end

--------------------------------------------------------------------------------

(source_file
  (for_statement
    (keyword)
    (iterator
      (identifier)
      (range
        (number)
        (unary_operator
          (operator)
          (number))
        (number)))
    (block
      (function_call
        (identifier)
        (func_call_paren)
        (identifier)
        (func_call_paren)))
    (keyword))
  (for_statement
    (keyword)
    (iterator
      (identifier)
      (function_call
        (identifier)
        (func_call_paren)
        (identifier)
        (func_call_paren)))
    (block
      (function_call
        (identifier)
        (func_call_paren)
        (identifier)
        (func_call_paren)))
    (keyword)))

================================================================================
ParFor Statement: Simple
================================================================================

parfor i = 1:3
    1
end

--------------------------------------------------------------------------------

(source_file
  (for_statement
    (keyword)
    (iterator
      (identifier)
      (range
        (number)
        (number)))
    (block
      (number))
    (keyword)))

================================================================================
ParFor Statement: Options
================================================================================

parfor (i = 1:3, 1)
    1
end

parfor (i = 1:3, option())
    1
end

parfor (i = 1:3, cluster)
    1
end

parfor (i = 1:3, 'cluster')
    1
end

--------------------------------------------------------------------------------

(source_file
  (for_statement
    (keyword)
    (iterator
      (identifier)
      (range
        (number)
        (number)))
    (number)
    (block
      (number))
    (keyword))
  (for_statement
    (keyword)
    (iterator
      (identifier)
      (range
        (number)
        (number)))
    (function_call
      (identifier)
      (func_call_paren)
      (func_call_paren))
    (block
      (number))
    (keyword))
  (for_statement
    (keyword)
    (iterator
      (identifier)
      (range
        (number)
        (number)))
    (identifier)
    (block
      (number))
    (keyword))
  (for_statement
    (keyword)
    (iterator
      (identifier)
      (range
        (number)
        (number)))
    (string)
    (block
      (number))
    (keyword)))
