test/corpus/lambda.txt
================================================================================
Lambda: Simple
================================================================================

@() 1
@() 1+1
@(x) 2
a = @(x,~) 3

--------------------------------------------------------------------------------

(source_file
  (lambda
    (number))
  (lambda
    (binary_operator
      (number)
      (number)))
  (lambda
    (arguments
      (identifier))
    (number))
  (assignment
    (identifier)
    (lambda
      (arguments
        (identifier)
        (ignored_argument))
      (number))))

================================================================================
Lambda: Handle
================================================================================

a = @sin

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (handle_operator
      (identifier))))
