test/corpus/matrix.txt
================================================================================
Matrix: Simple
================================================================================

[1 2 3 4]
[1,2,3,4]

--------------------------------------------------------------------------------

(source_file
  (matrix
    (row
      (number)
      (number)
      (number)
      (number)))
  (matrix
    (row
      (number)
      (number)
      (number)
      (number))))

================================================================================
Matrix: Multidimensional
================================================================================

[1, 2; 3, 4]
[1, 2; 3 4]

--------------------------------------------------------------------------------

(source_file
  (matrix
    (row
      (number)
      (number))
    (row
      (number)
      (number)))
  (matrix
    (row
      (number)
      (number))
    (row
      (number)
      (number))))

================================================================================
Matrix: Concatenation
================================================================================

[A-L*C [L B]; I 0]

[A- L*C [L B]
 I      0    ]

--------------------------------------------------------------------------------

(source_file
  (matrix
    (row
      (binary_operator
        (identifier)
        (binary_operator
          (identifier)
          (identifier)))
      (matrix
        (row
          (identifier)
          (identifier))))
    (row
      (identifier)
      (number)))
  (matrix
    (row
      (binary_operator
        (identifier)
        (binary_operator
          (identifier)
          (identifier)))
      (matrix
        (row
          (identifier)
          (identifier))))
    (row
      (identifier)
      (number))))

================================================================================
Matrix: Multiline
================================================================================

[1 2
 3 4]

--------------------------------------------------------------------------------

(source_file
  (matrix
    (row
      (number)
      (number))
    (row
      (number)
      (number))))

================================================================================
Matrix: Expression With Transpose
================================================================================

[2*A' + 5+B' D'-3'
 3 4]

--------------------------------------------------------------------------------

(source_file
  (matrix
    (row
      (binary_operator
        (binary_operator
          (binary_operator
            (number)
            (postfix_operator
              (identifier)))
          (number))
        (postfix_operator
          (identifier)))
      (binary_operator
        (postfix_operator
          (identifier))
        (postfix_operator
          (number))))
    (row
      (number)
      (number))))

================================================================================
Matrix: Meaning of Spaces
================================================================================

[1+1 +1 - 2 -2 3+ 4]

--------------------------------------------------------------------------------

(source_file
  (matrix
    (row
      (binary_operator
        (number)
        (number))
      (binary_operator
        (unary_operator
          (number))
        (number))
      (unary_operator
        (number))
      (binary_operator
        (number)
        (number)))))
